# cmp303-coursework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json  notes.md
client/: CMakeLists.txt  main.cc
client/core/: assets.cc  assets.h  config.h  gui.cc  id.cc  id.h  json.cc  json.h  scene.cc  scene.h  sprite.cc  sprite.h  tilemap.cc  tilemap.h
client/gameplay/: collider.cc  collider.h  game_object.cc  game_object.h  map_scene.cc  map_scene.h  menu_scene.cc  menu_scene.h
client/gameplay/objects/: bomb.cc  bomb.h  crate.cc  crate.h  explosion.cc  explosion.h  player.cc  player.h  powerup.cc  powerup.h
client/net/: convert.cc  convert.h  net.cc  net.h  net_types.h
client/utils/: base26.cc  base26.h  cached_vec.h  dynarray.h  font_map.h  interpolation.h  math_utils.h  ptr.h  rect.h  ref_map.h  texture_map.h  types.h  unique_id.cc  vec.h
libs/: CMakeLists.txt
libs/cjson/: CMakeLists.txt
libs/raylib/: CMakeOptions.txt  README.md
libs/raylib/src/: raylib.h  rcore.c
libs/raylib/src/extras/: raygui.h
res/: candy.rgs  player.json  player_end.json
res/tiled/: 0.json  1.json  2.json  3.json  4.json  5.json  6.json  7.json  convert.py  convert_all.py  copy_again.py  magiscarf.json  map1.tmx  map2.tmx  map_0.json  map_1.json  map_2.json  map_3.json  map_4.json  map_5.json  map_6.json  map_7.json
server/: CMakeLists.txt  main.cc
server/core/: gui.h  id.cc  id.h  json.cc  scene.cc  scene.h  sprite.cc  sprite.h  tilemap.cc  tilemap.h
server/gameplay/: collider.cc  collider.h  game_object.cc  game_object.h  host_scene.cc  host_scene.h  join_scene.cc  join_scene.h  map_scene.cc  map_scene.h  menu_scene.cc  menu_scene.h
server/gameplay/objects/: bomb.cc  bomb.h  crate.cc  crate.h  explosion.cc  explosion.h  player.cc  player.h  powerup.cc  powerup.h
server/net/: convert.cc  convert.h  net.cc  net.h  net_types.h
server/src/: collider.cc  collider.h  main.cc
server/utils/: dynarray.h  rect.h  unique_id.h  vec.h  wait.cc  wait.h
src/: CMakeLists.txt  main.cc
